<resources>
    <string name="app_name">App_BC_Chat</string>
    <string name="welcome_back">Chào mừng bạn quay trở lại</string>
    <string name="login">Đăng nhập</string>
    <string name="login_to_continues">Đăng nhập để tiếp tực</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="create_new_account">Tại mới một tài khoản</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="name">Tên</string>
    <string name="confrim_passwod">Xác nhận mật khẩu</string>
    <string name="sign_up">Đăng kí</string>
    <string name="select_user">Chọn người dùng</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Hoạt động</string>
    <string name="trang_tb">Trang thiết bị</string>
    <string name="t_m_ki_m_nhanh">Tìm kiếm nhanh...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoa_don">Hóa đơn</string>
    <string name="title_activity_cap_nhat_tt_user">CapNhatTtUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>